[package]
authors = ["Navrin <navman360@gmail.com>"]
name = "quote-bot"
version = "0.1.0"

[dependencies]
serde = "1.0.15"
serde_derive = "1.0.15"
toml = "0.4.5"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.serenity]
branch = "v0.5.0"
git = "https://github.com/zeyla/serenity"
